cleanup (gallery): remove unused property

--- a/src/WPF.Material.Gallery/Views/ShellView.xaml
+++ b/src/WPF.Material.Gallery/Views/ShellView.xaml
@@ -72,8 +72,7 @@
                 Command="{Binding NavigateCommand, Mode=OneTime}"
                 CommandParameter="{x:Type viewModels:HomeViewModel}"
                 Content="Home"
-                IsChecked="True"
-                IsThreeState="True" />
+                IsChecked="True" />
 
             <md3:NavigationRailItem
                 md3:IconAssist.SelectIcon="Apps"
