--- a/src/WPF.Material/Theming/XAML/Container.xaml
+++ b/src/WPF.Material/Theming/XAML/Container.xaml
@@ -8,6 +8,51 @@
     xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
     mc:Ignorable="po">
 
+    <DropShadowEffect
+        x:Key="Material.Internal.Elevation1"
+        po:Freeze="True"
+        BlurRadius="3"
+        Direction="270"
+        Opacity="0.3"
+        RenderingBias="Performance"
+        ShadowDepth="1" />
+
+    <DropShadowEffect
+        x:Key="Material.Internal.Elevation2"
+        po:Freeze="True"
+        BlurRadius="6"
+        Direction="270"
+        Opacity="0.3"
+        RenderingBias="Performance"
+        ShadowDepth="2" />
+
+    <DropShadowEffect
+        x:Key="Material.Internal.Elevation3"
+        po:Freeze="True"
+        BlurRadius="8"
+        Direction="270"
+        Opacity="0.3"
+        RenderingBias="Performance"
+        ShadowDepth="3" />
+
+    <DropShadowEffect
+        x:Key="Material.Internal.Elevation4"
+        po:Freeze="True"
+        BlurRadius="10"
+        Direction="270"
+        Opacity="0.3"
+        RenderingBias="Performance"
+        ShadowDepth="4" />
+
+    <DropShadowEffect
+        x:Key="Material.Internal.Elevation5"
+        po:Freeze="True"
+        BlurRadius="12"
+        Direction="270"
+        Opacity="0.3"
+        RenderingBias="Performance"
+        ShadowDepth="6" />
+
     <Style TargetType="{x:Type controls:Container}">
         <Setter Property="Background" Value="{DynamicResource Material.Colors.Surface}" />
         <Setter Property="Foreground" Value="{DynamicResource Material.Colors.OnSurface}" />
@@ -17,53 +62,6 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:Container}">
-                    <ControlTemplate.Resources>
-                        <DropShadowEffect
-                            x:Key="Material.Internal.Elevation1"
-                            po:Freeze="True"
-                            BlurRadius="3"
-                            Direction="270"
-                            Opacity="0.3"
-                            RenderingBias="Performance"
-                            ShadowDepth="1" />
-
-                        <DropShadowEffect
-                            x:Key="Material.Internal.Elevation2"
-                            po:Freeze="True"
-                            BlurRadius="6"
-                            Direction="270"
-                            Opacity="0.3"
-                            RenderingBias="Performance"
-                            ShadowDepth="2" />
-
-                        <DropShadowEffect
-                            x:Key="Material.Internal.Elevation3"
-                            po:Freeze="True"
-                            BlurRadius="8"
-                            Direction="270"
-                            Opacity="0.3"
-                            RenderingBias="Performance"
-                            ShadowDepth="3" />
-
-                        <DropShadowEffect
-                            x:Key="Material.Internal.Elevation4"
-                            po:Freeze="True"
-                            BlurRadius="10"
-                            Direction="270"
-                            Opacity="0.3"
-                            RenderingBias="Performance"
-                            ShadowDepth="4" />
-
-                        <DropShadowEffect
-                            x:Key="Material.Internal.Elevation5"
-                            po:Freeze="True"
-                            BlurRadius="12"
-                            Direction="270"
-                            Opacity="0.3"
-                            RenderingBias="Performance"
-                            ShadowDepth="6" />
-                    </ControlTemplate.Resources>
-
                     <controls:OverlapPanel>
                         <controls:Surface
                             x:Name="PART_Surface"
@@ -76,7 +74,7 @@
                             ShapeStyle="{TemplateBinding assists:ShapeAssist.Style}" />
 
                         <Path
-                            x:Name="Overlay"
+                            x:Name="StateLayer"
                             Data="{TemplateBinding RenderedGeometry}"
                             Fill="{TemplateBinding Foreground}"
                             Opacity="0.0"
@@ -99,20 +97,20 @@
                     <ControlTemplate.Triggers>
                         <!--  States  -->
                         <Trigger Property="assists:InteractionAssist.IsHovered" Value="True">
-                            <Setter TargetName="Overlay" Property="Opacity" Value="0.08" />
+                            <Setter TargetName="StateLayer" Property="Opacity" Value="0.08" />
                         </Trigger>
                         <Trigger Property="assists:InteractionAssist.IsPressed" Value="True">
-                            <Setter TargetName="Overlay" Property="Opacity" Value="0.1" />
+                            <Setter TargetName="StateLayer" Property="Opacity" Value="0.1" />
                         </Trigger>
                         <Trigger Property="assists:InteractionAssist.IsDragged" Value="True">
-                            <Setter TargetName="Overlay" Property="Opacity" Value="0.16" />
+                            <Setter TargetName="StateLayer" Property="Opacity" Value="0.16" />
                         </Trigger>
                         <Trigger Property="assists:InteractionAssist.IsEnabled" Value="False">
-                            <Setter TargetName="Content" Property="Opacity" Value="0.38" />
-                            <Setter TargetName="Overlay" Property="Opacity" Value="0.12" />
-                            <Setter TargetName="Overlay" Property="Fill" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Background}" />
-                            <Setter TargetName="Overlay" Property="Stroke" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderBrush}" />
                             <Setter TargetName="PART_Surface" Property="Visibility" Value="Hidden" />
+                            <Setter TargetName="Content" Property="Opacity" Value="0.38" />
+                            <Setter TargetName="StateLayer" Property="Opacity" Value="0.12" />
+                            <Setter TargetName="StateLayer" Property="Fill" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Background}" />
+                            <Setter TargetName="StateLayer" Property="Stroke" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderBrush}" />
                         </Trigger>
 
                         <!--  Elevations  -->
